--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     </div> -->
                     <div class="tab__contents" id="education">
                         <ul>
-                            <li><span> Education</span><br>Desining  usre interafce of responsive web pages</li>
-                            <li><span>Frontend Developer</span><br>Desining responsive web pages</li>
-                            <li><span>JAVA</span></li>
+                            <li><span> Education</span></li>
+                            <li><span>BTech CSE (Bachlor of Technology in Computer Science Enginnering)</span><br>At CHHATRAPATI SHIVAJI MAHARAJ UNIVERSITY, NAVI MUMBAI</li>
+
                         </ul>
                     </div>
                 </div>
