form funcationality added

--- a/index.html
+++ b/index.html
@@ -152,13 +152,14 @@
                     <a href="assets/my-cv.pdf" download="" class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type=" text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Name" placeholder="Your Email" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="your Message"></textarea>
                         <button type="submit" class="btn btn2">submit</button>
 
                     </form>
+                    <Span id="msg"></Span>
                 </div>
             </div>
         </div>
@@ -190,5 +191,23 @@
             sidemenu.style.right = "-200px";
         };
     </script>
+    <!-- ----------------Gooogle sheets link -------------------- -->
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycby-6kKlpkUUi1BtBRoejfz0TOM2P0v_UBnfgK1YOLxKx7dFne0_gzrExpbWBLtITQGJ-Q/exec'
+        const form = document.forms['submit-to-google-sheet']
+        const msg=document.getElementById('msg')
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                msg.innerHTML="Message Sent Sucessfully!"
+                setTimeout(function(){
+                    msg.innerHTML="";
+                },5000)
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
 </body>
 </html>
