--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => {
+            .then(response => {9899879
                 msg.innerHTML="Message Sent Sucessfully!"
                 setTimeout(function(){
                     msg.innerHTML="";
